NetBSD Problem Report #45385

From www@NetBSD.org  Wed Sep 21 12:32:53 2011
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 4618F63B89A
	for <gnats-bugs@gnats.NetBSD.org>; Wed, 21 Sep 2011 12:32:53 +0000 (UTC)
Message-Id: <20110921123252.B30AF63B86B@www.NetBSD.org>
Date: Wed, 21 Sep 2011 12:32:52 +0000 (UTC)
From: henning.petersen@t-online.de
Reply-To: henning.petersen@t-online.de
To: gnats-bugs@NetBSD.org
Subject: Swapped arguments in gencat.c
X-Send-Pr-Version: www-1.0

>Number:         45385
>Category:       bin
>Synopsis:       Swapped arguments in gencat.c
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Sep 21 12:35:00 +0000 2011
>Closed-Date:    Wed Sep 21 18:06:02 +0000 2011
>Last-Modified:  Wed Sep 21 18:06:02 +0000 2011
>Originator:     Henning Petersen
>Release:        NetBSD-current
>Organization:
>Environment:
>Description:
Swapped arguments in lseek gencat/gencat.c
>How-To-Repeat:

>Fix:
diff -u -r1.31 gencat.c
--- usr.bin/gencat/gencat.c	4 Sep 2011 20:27:05 -0000	1.31
+++ usr.bin/gencat/gencat.c	21 Sep 2011 08:41:48 -0000
@@ -186,7 +186,7 @@
 			curfile = catfile;
 			updatecat = 1;
 			MCReadCat(ofd);
-			if (lseek(ofd, SEEK_SET, 0) < 0) {
+			if (lseek(ofd, (off_t)0, SEEK_SET) < 0) {
 				err(1, "Unable to seek on %s", catfile);
 				/* NOTREACHED */
 			}

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/45385 CVS commit: src/usr.bin/gencat
Date: Wed, 21 Sep 2011 10:33:35 -0400

 Module Name:	src
 Committed By:	christos
 Date:		Wed Sep 21 14:33:35 UTC 2011

 Modified Files:
 	src/usr.bin/gencat: gencat.c

 Log Message:
 PR/45385: Henning Petersen: Swapped arguments in lseek


 To generate a diff of this commit:
 cvs rdiff -u -r1.31 -r1.32 src/usr.bin/gencat/gencat.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Wed, 21 Sep 2011 18:06:02 +0000
State-Changed-Why:
Committed by christos, thanks!


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.